plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.5'
}

group   = 'com.gola'
version = '1.0.0-SNAPSHOT'

java {
    toolchain { languageVersion = JavaLanguageVersion.of(21) }
}

configurations {
    compileOnly { extendsFrom annotationProcessor }
}

repositories {
    mavenCentral()
}

configurations.all {
    resolutionStrategy {
        force 'io.jsonwebtoken:jjwt-api:0.12.5'
        force 'io.jsonwebtoken:jjwt-impl:0.12.5'
        force 'io.jsonwebtoken:jjwt-jackson:0.12.5'
    }
}

ext {
    mapstructVersion = '1.5.5.Final'
    jwtVersion       = '0.12.5'
    openApiVersion   = '2.5.0'
    stripeVersion    = '24.18.0'
    twilioVersion = '9.14.1'
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // Database
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // JWT
    implementation "io.jsonwebtoken:jjwt-api:0.12.5"
    runtimeOnly    "io.jsonwebtoken:jjwt-impl:0.12.5"
    runtimeOnly    "io.jsonwebtoken:jjwt-jackson:0.12.5"

    // Lombok
    compileOnly         'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MapStruct
    implementation      "org.mapstruct:mapstruct:1.5.5.Final"
    annotationProcessor "org.mapstruct:mapstruct-processor:1.5.5.Final"
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // OpenAPI
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0"

    // Stripe
    implementation "com.stripe:stripe-java:24.18.0"

    // Twilio
    implementation("com.twilio.sdk:twilio:9.14.1") {
        exclude group: "io.jsonwebtoken"
    }

    // Bucket4j
    implementation 'com.bucket4j:bucket4j-core:8.10.1'

    // Passay
    implementation 'org.passay:passay:1.6.4'

    // Commons
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'com.google.guava:guava:33.2.1-jre'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // Auth0 JWT (for Google OAuth verification)
    implementation 'com.auth0:java-jwt:4.4.0'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:testcontainers'
}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty 'spring.profiles.active', 'test'
    maxParallelForks = 1
    jvmArgs '-Xmx1024m'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-Amapstruct.defaultComponentModel=spring'
}

bootJar {
    enabled = true
}
jar {
    enabled = false
}